--- a/index.html
+++ b/index.html
@@ -277,12 +277,12 @@ Furthermore, Sachin's talent for photography is another aspect of his creative s
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card">
-                        <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="https://cdn.dribbble.com/users/1578582/screenshots/16828054/media/71b31006043306b6a4a7f0bb547491cb.png?compress=1&resize=768x576&vertical=top" alt="Card image" style="width:100%">
                         <div class="card-body">
-                            <h4 class="card-title">Project 1</h4>
-                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <h4 class="card-title">Youtube Clone</h4>
+                            <p class="card-text">A clone of Youtube made by HTML, CSS & Javascript.</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="https://sheenu-exe.github.io/YoutubeClone/" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
