--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@ Furthermore, Sachin's talent for photography is another aspect of his creative s
                     <div class="card portfolioContent">
                         <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
-                            <h4 class="card-title">Project 2</h4>
-                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <h4 class="card-title">ToDo-Xpress</h4>
+                            <p class="card-text">Todo Xpress is a To-do list website made by using HTML,CSS,Javascript and Bootstrap</p>
                             <div class="text-center">
                                 <a href="#" class="btn btn-success">Link</a>
                             </div>
