--- a/index.html
+++ b/index.html
@@ -290,12 +290,12 @@ Furthermore, Sachin's talent for photography is another aspect of his creative s
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="https://i.ibb.co/zfCTjdt/Screenshot-2023-05-20-173118.png" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">ToDo-Xpress</h4>
                             <p class="card-text">Todo Xpress is a To-do list website made by using HTML,CSS,Javascript and Bootstrap</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href=" https://sheenu-exe.github.io/Todo-Xpress/" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
