--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ Furthermore, Sachin's talent for photography is another aspect of his creative s
                             <h4 class="card-title">ToDo-Xpress</h4>
                             <p class="card-text">Todo Xpress is a To-do list website made by using HTML,CSS,Javascript and Bootstrap</p>
                             <div class="text-center">
-                                <a href=" https://sheenu-exe.github.io/Todo-Xpress/" class="btn btn-success">Link</a>
+                                <a href=" https://sheenu-exe.github.io/Todo-Xpress/" target="_blank" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
