--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ Furthermore, Sachin's talent for photography is another aspect of his creative s
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <div class="card-img-top style="width:100%;height:0px;position:relative;padding-bottom:56.094%;"><iframe src="https://streamable.com/e/kl9q1r?autoplay=1" frameborder="0" width="100%" height="100%" allowfullscreen allow="autoplay" style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+                        <div class="card-img-top" style="width:100%;height:0px;position:relative;padding-bottom:56.094%;"><iframe src="https://streamable.com/e/kl9q1r?autoplay=1" frameborder="0" width="100%" height="100%" allowfullscreen allow="autoplay" style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
                         <div class="card-body">
                             <h4 class="card-title">Hero Theme Portfolio</h4>
                             <p class="card-text">Portfolio made with HTML, JAVASCRIPT, CSS & BOOTSTRAP</p>
