--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ Furthermore, Sachin's talent for photography is another aspect of his creative s
                     <div class="card portfolioContent">
                         <div class="card-img-top" style="width:100%;height:0px;position:relative;padding-bottom:56.094%;"><iframe src="https://streamable.com/e/kl9q1r?autoplay=1&nocontrols=1" frameborder="0" width="100%" height="100%" allowfullscreen allow="autoplay" style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
                         <div class="card-body">
-                            <h4 class="card-title">Hero Theme Portfolio</h4>
+                            <h4 class="card-title">Portfolio</h4>
                             <p class="card-text">Portfolio made with HTML, JAVASCRIPT, CSS & BOOTSTRAP</p>
                             <div class="text-center">
                                 <a href="https://sheenu-exe.github.io/portfolio/" class="btn btn-success">Link</a>
