--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ Furthermore, Sachin's talent for photography is another aspect of his creative s
                             <h4 class="card-title">Youtube Clone</h4>
                             <p class="card-text">A clone of Youtube made by HTML, CSS & Javascript.</p>
                             <div class="text-center">
-                                <a href="https://sheenu-exe.github.io/YoutubeClone/" class="btn btn-success">Link</a>
+                                <a href="https://sheenu-exe.github.io/Youtubesachin/" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
