--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ Furthermore, Sachin's talent for photography is another aspect of his creative s
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <div class="card-img-top" style="width:100%;height:0px;position:relative;padding-bottom:60.599%;"><iframe src="https://watch.wave.video/4q70MtS2RNQHyMm0" frameborder="0" width="100%" height="100%" allowfullscreen allow="autoplay" style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+                        <div class:"card-img-top" style="padding: 56.07% 0 0 0; position: relative"><div style="height:100%;left:0;position:absolute;top:0;width:100%"><iframe height="100%" width="100%;" src="https://embed.wave.video/4q70MtS2RNQHyMm0" frameborder="0" allow="autoplay; fullscreen" scrolling="no"></iframe></div></div>
                         <div class="card-body">
                             <h4 class="card-title">ToDo-Xpress</h4>
                             <p class="card-text">Todo Xpress is a To-do list website made by using HTML,CSS,Javascript and Bootstrap</p>
