--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Furthermore, Sachin's talent for photography is another aspect of his creative s
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card">
-                        <img class="card-img-top" src="https://cdn.dribbble.com/users/1578582/screenshots/16828054/media/71b31006043306b6a4a7f0bb547491cb.png?compress=1&resize=768x576&vertical=top" alt="Card image" style="width:100%">
+                        <div classs="card-img-top" style="padding: 56.07% 0 0 0; position: relative"><div style="height:100%;left:0;position:absolute;top:0;width:100%"><iframe height="100%" width="100%;" src="https://embed.wave.video/azEUGZSRtTvdbkle" frameborder="0" allow="autoplay; fullscreen" scrolling="no"></iframe></div></div>
                         <div class="card-body">
                             <h4 class="card-title">Youtube Clone</h4>
                             <p class="card-text">A clone of Youtube made by HTML, CSS & Javascript.</p>
