--- a/index.html
+++ b/index.html
@@ -342,12 +342,12 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="https://i.ibb.co/6yZprKZ/Screenshot-2023-07-03-234025.png" alt="Card image" style="width:100%">
                         <div class="card-body">
-                            <h4 class="card-title">Project 6</h4>
-                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <h4 class="card-title">Sign Up Page</h4>
+                            <p class="card-text">basic front end project of a signup page.</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="https://sheenu-exe.github.io/Sign-Up-Page/" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
