--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                             <h4 class="card-title">Youtube Clone</h4>
                             <p class="card-text">A clone of Youtube made by HTML, CSS & Javascript.</p>
                             <div class="text-center">
-                                <a href="https://sheenu-exe.github.io/Youtubesachin/" class="btn btn-success">Link</a>
+                                <a href="https://sheenu-exe.github.io/Youtubesachin/" target="_blank" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
@@ -306,7 +306,7 @@
                             <h4 class="card-title">Portfolio</h4>
                             <p class="card-text">Portfolio made with HTML, JAVASCRIPT, CSS & BOOTSTRAP</p>
                             <div class="text-center">
-                                <a href="https://sheenu-exe.github.io/portfolio/" class="btn btn-success">Link</a>
+                                <a href="https://sheenu-exe.github.io/portfolio/" target="_blank" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
@@ -321,7 +321,7 @@
                             <h4 class="card-title">Landing Page</h4>
                             <p class="card-text">A dummy Landing Page Project.</p>
                             <div class="text-center">
-                                <a href="https://sheenu-exe.github.io/SilverEmbrace/" class="btn btn-success">Link</a>
+                                <a href="https://sheenu-exe.github.io/SilverEmbrace/" target="_blank" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
@@ -334,7 +334,7 @@
                             <h4 class="card-title">Loco-Weather</h4>
                             <p class="card-text">A Weather Map app made using API.</p>
                             <div class="text-center">
-                                <a href="https://sheenu-exe.github.io/LocoWeather/" class="btn btn-success">Link</a>
+                                <a href="https://sheenu-exe.github.io/LocoWeather/" target="_blank" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
@@ -347,7 +347,7 @@
                             <h4 class="card-title">Sign Up Page</h4>
                             <p class="card-text">basic front end project of a signup page.</p>
                             <div class="text-center">
-                                <a href="https://sheenu-exe.github.io/Sign-Up-Page/" class="btn btn-success">Link</a>
+                                <a href="https://sheenu-exe.github.io/Sign-Up-Page/" target="_blank" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
