--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                         </div>
                         <div class="col-md-6">
                             <ul>
-                                <li>Qualification: 12th Passed</li>
+                                <li>Qualification: Pursuing BCA</li>
                                 <li>Self-Taught Developer</li>
                                 <li><i class="fa-regular fa-calendar-check"></i>10.02.2005</li>
 
