--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
 </head>
 <style>
+    @font-face {
+    font-family: Daisy;
+    src: url(Beckan-Regular.otf);
+}
     /* hero background image */
     
 .bgimage {
@@ -32,6 +36,7 @@
 .hero_title {
     font-size: 4.5rem;
     font-weight: bolder;
+    font-family: Daisy;
 }
 .hero_desc {
     font-size: 2rem;
