--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <!-- portfolio section-->
     <section id="portfolio">
         <div class="container mt-3">
-            <h1 class="text-center">Portfolio</h1>
+            <h1 class="text-center">Project</h1>
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card">
