--- a/index.html
+++ b/index.html
@@ -279,12 +279,12 @@
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card">
-                        <div classs="card-img-top" style="padding: 56.07% 0 0 0; position: relative"><div style="height:100%;left:0;position:absolute;top:0;width:100%"><iframe height="100%" width="100%;" src="https://embed.wave.video/azEUGZSRtTvdbkle" frameborder="0" allow="autoplay; fullscreen" scrolling="no"></iframe></div></div>
+                        <div class="card-img-top" style="padding: 56.07% 0 0 0; position: relative"><div style="height:100%;left:0;position:absolute;top:0;width:100%"><iframe height="100%" width="100%;" src="https://embed.wave.video/FgFue5vTBNXrHZXG" frameborder="0" allow="autoplay; fullscreen" scrolling="no"></iframe></div></div>
                         <div class="card-body">
-                            <h4 class="card-title">Youtube Clone</h4>
-                            <p class="card-text">A clone of Youtube made by HTML, CSS & Javascript.</p>
+                            <h4 class="card-title">Loco-Weather</h4>
+                            <p class="card-text">A weather app</p>
                             <div class="text-center">
-                                <a href="https://sheenu-exe.github.io/Youtubesachin/" target="_blank" class="btn btn-success">Link</a>
+                                <a href="https://sheenu-exe.github.io/LocoWeather/" target="_blank" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
@@ -333,12 +333,12 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <div class="card-img-top" style="padding: 56.07% 0 0 0; position: relative"><div style="height:100%;left:0;position:absolute;top:0;width:100%"><iframe height="100%" width="100%;" src="https://embed.wave.video/FgFue5vTBNXrHZXG" frameborder="0" allow="autoplay; fullscreen" scrolling="no"></iframe></div></div>
+                        <div class="card-img-top" style="padding: 56.07% 0 0 0; position: relative"><div style="height:100%;left:0;position:absolute;top:0;width:100%"><iframe height="100%" width="100%;" src="https://embed.wave.video/azEUGZSRtTvdbkle" frameborder="0" allow="autoplay; fullscreen" scrolling="no"></iframe></div></div>
                         <div class="card-body">
-                            <h4 class="card-title">Loco-Weather</h4>
-                            <p class="card-text">A Weather Map app made using API.</p>
+                            <h4 class="card-title">Youtube Clone</h4>
+                            <p class="card-text">A clone of Youtube</p>
                             <div class="text-center">
-                                <a href="https://sheenu-exe.github.io/LocoWeather/" target="_blank" class="btn btn-success">Link</a>
+                                <a href="https://sheenu-exe.github.io/Youtubesachin/" target="_blank" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
