--- a/index.html
+++ b/index.html
@@ -305,12 +305,12 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <div clas="card-img-top" style="padding: 56.25% 0 0 0; position: relative"><div style="height:100%;left:0;position:absolute;top:0;width:100%"><iframe height="100%" width="100%;" src="https://embed.wave.video/RfZsCFn0IcCI5Qnn" frameborder="0" allow="autoplay; fullscreen" scrolling="no"></iframe></div></div>
+                        <img class="card-img-top" src="https://i.ibb.co/xFTJJXP/Screenshot-2023-08-02-143552.png" alt="Card image" style="width:100%">
                         <div class="card-body">
-                            <h4 class="card-title">Portfolio</h4>
-                            <p class="card-text">Portfolio made with HTML, JAVASCRIPT, CSS & BOOTSTRAP</p>
+                            <h4 class="card-title">ZEST</h4>
+                            <p class="card-text">Zest is a fashion store with multiple pages made by using HTML CSS & JavaScript with bootstrap.</p>
                             <div class="text-center">
-                                <a href="https://sheenu-exe.github.io/portfolio/" target="_blank" class="btn btn-success">Link</a>
+                                <a href="https://sheenu-exe.github.io/ZEST/" target="_blank" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
@@ -366,6 +366,18 @@
                             <p class="card-text">A cafe landing page.</p>
                             <div class="text-center">
                                 <a href="https://sheenu-exe.github.io/Touchwood-Cafe/" target="_blank" class="btn btn-success">Link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mt-4">
+                    <div class="card portfolioContent">
+                        <div clas="card-img-top" style="padding: 56.25% 0 0 0; position: relative"><div style="height:100%;left:0;position:absolute;top:0;width:100%"><iframe height="100%" width="100%;" src="https://embed.wave.video/RfZsCFn0IcCI5Qnn" frameborder="0" allow="autoplay; fullscreen" scrolling="no"></iframe></div></div>
+                        <div class="card-body">
+                            <h4 class="card-title">Portfolio</h4>
+                            <p class="card-text">This Portfolio is made using Basic HTML CSS and Javascript.</p>
+                            <div class="text-center">
+                                <a href="https://sheenu-exe.github.io/portfolio/" target="_blank" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
