--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a href="Resume.pdf" class="nav-link" target="_blank">Resume <i class="fa-solid fa-file-pdf"></i></a>
+                        <a href="Resume(1).pdf" class="nav-link" target="_blank">Resume <i class="fa-solid fa-file-pdf"></i></a>
                     </li>
                 </ul>
                 <script>
