--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
     <title>Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/dsN51x7/Blue-Retro-Vintage-Style-Badge-Logo-removebg-preview.png">
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/4JfCSQV/vecteezy-unique-and-modern-sp-logo-design.jpg">
    
 
 </head>
