--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="col-md-6">
                             <ul>
                                 <li>Name: Sachin Parihar</li>
-                                <li id="age"></li>
+                                <li id="Age"></li>
                                 <li>Occupation:Front-end Developer</li>
 
                             </ul>
